svelte/src/routes/app.css
/* ... */
.tab.editing {
  padding: 0;
}

.tab input {
  max-width: 120px;
  width: 100%;
  background: transparent;
  color: #f6f6f6;
  border: none;
  outline: none;
  padding-left: 5px;
}

#statusBar {
  position: fixed;
  display: flex;
  flex-direction: row;
  bottom: 0;
  left: 0;
  right: 0;
  justify-content: flex-start;
  width: 100%;
  height: 20px;
  align-items: center;
  padding: 2px 0 2px 10px;
  font-size: 11px;
  border-top: 1px solid #444;
}

.note {
  display: flex;
  flex: 1 1 0;
  flex-direction: column;
  background: #222;
  border-radius: 8px;
  padding: 18px 4px;
  max-height: calc((100vh - 151px) / 2);
  height: 100%;
  min-width: calc((100vw - 140px) / 4);
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  transition: transform 0.2s, box-shadow 0.2s;
}

.note.category {
  align-items: center;
  max-height: calc((100vh - 151px) / 2);
  height: 100%;
  min-width: calc((100vw - 140px) / 4);
  width: 100%;
}

.note.editing .tiptap.ProseMirror, .note .tiptap.ProseMirror {
  max-height: 550px;
  width: 100%;
  max-width: 100%;
  color: #f6f6f6;
  background: transparent;
  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;
  border: 1px solid #888;
  border-radius: 6px;
  outline: none;
  text-align: left;
  padding: 5px;
}

.note.editing .tiptap.ProseMirror:focus, .note .tiptap.ProseMirror:focus {
  border-color: #723fffd0;
}

.note.zoomed {
  max-height: calc((100vh - 151px) / 1.2);
  height: 100%;
}

.noteTitle {
  margin: 0;
}

.note:hover {
  transform: translateY(-4px);
  box-shadow: 0 8px 24px rgba(0,0,0,1);
}

.noteContent {
  flex: 1 1 auto;
  overflow-y: auto;
  margin: 12px 0;
  text-align: left;
  white-space: pre-wrap;
  word-break: break-word;
  word-wrap: break-word;
}

#noteContentOuter {
  padding: 0 14px;
}

#noteTitleBox {
  display: flex;
  flex-direction: column;
  width: 100%;
  justify-items: center;
}

#noteTitleBox input {
  max-width: 250px;
  width: 100%;
  height: 24px;
  margin-bottom: 10px;
  align-self: center;
  text-align: center;
  font-size: 18px;
  font-weight: 700;
  color: #f6f6f6;
  background: transparent;
  border: 1px solid #888;
  border-radius: 6px;
}

#noteTitleBox input:focus {
  border-color: #723fffd0;
  outline: none;
}

.noteControls {
  display: flex;
  flex-direction: row;
  flex: 1 1 0;
  justify-content: center;
  gap: 5px;
  margin: 0 10px 10px;
}

.noteControls button {
  background: #333;
  color: #f6f6f6;
  max-width: 100px;
  width: 100%;
  height: 32px;
  border: none;
  border-radius: 8px;
  box-shadow: 0 4px 12px rgba(0,0,0,0.8);
  transition: transform 0.2s, box-shadow 0.2s;
}

.noteControls button:disabled {
  opacity: 0.5;
  cursor: not-allowed;
  transform: none;
}

.noteControls button:not(:disabled):hover {
  transform: translateY(-4px);
  box-shadow: 0 8px 24px rgba(0,0,0,1);
  cursor: pointer;
  background: #444;
}

.noteControls #noteEditSaveBtn, .noteControls #noteEditCancelBtn {
  height: 28px;
  max-width: 80px;
}

.subNotes {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(381px, 100vw));
  min-height: 50px;
  gap: 16px;
  margin-top: 16px;
  padding: 12px;
  background: #151515;
  border-radius: 8px;
}

.subNotes .note {
  height: unset;
  max-height: 600px;
  min-width: unset;
}

#dragZoomContainer {
  display: flex;
  flex-direction: row;
}

.dragHandle {
  display: flex;
  align-self: flex-end;
  align-items: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  margin-right: 14px;
  margin-bottom: 6px;
  background: transparent;
}

.dragHandle #dragHandle-icon {
  margin: 0;
  width: 20px;
  height: 20px;
  filter: invert(0.7);
}

.zoomBtn {
  display: flex;
  align-content: center;
  width: 30px;
  height: 30px;
  border: 0;
  background: transparent;
  padding: 0;
  margin-left: 14px;
}

.zoomBtn:disabled {
  opacity: 0.5;
}

.zoomBtn #zoom-icon, .zoomBtn #zoom-icon-disabled {
  width: 30px;
  height: 30px;
  filter: invert(0.7);
}

.zoomBtn #zoom-icon-disabled:hover {
  cursor: not-allowed;
}

.zoomBtn #zoom-icon:hover {
  filter: invert(0.9);
  cursor: pointer;
}

.zoomedNoteOverlay {
  position: fixed;
  display: flex;
  align-items: center;
  z-index: 10000;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(15px);
}

.zoomedNoteContent {
  position: relative;
  inset: 0;
  width: 50%;
  height: 80%;
  margin: auto;
  overflow: auto;
}

.zoomedNoteContent .warnMessage {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  justify-self: center;
  max-height: 24px;
  font-size: 14px;
  margin: 0;
  margin-top: 10px;
  padding: 10px;
  border: 1px solid #723fffd0;
  border-radius: 8px;
}

.zoomedNoteCloseBtn {
  margin: 5px 0 20px;
  width: 140px;
  height: 45px;
  border: none;
  border-radius: 6px;
  background-color: #222;
  color: #f6f6f6;
  transition: transform 0.2s
}

.zoomedNoteCloseBtn:hover {
  cursor: pointer;
  background-color: #333;
  transform: translateY(-3px);
}

#noteIcon, #clockIcon {
  display: flex;
  justify-self: center;
  max-width: 40px;
  width: 100%;
  max-height: 40px;
  height: 100%;
}

#noteIcon {
  filter: saturate(0) contrast(1.2);
}

#clockIcon {
  filter: brightness(0) invert(0.7);
}

.arrowUp-icon, .arrowDown-icon {
  display: flex;
  justify-self: center;
  height: 19px;
  width: 40px;
  filter: brightness(0) invert(0.7);
  transition: transform 0.2s;
}

.arrowUp-icon:hover, .arrowDown-icon:hover {
  transform: scale(1.1) translateY(-1px);
}

#mainViewTimerFinishedContainer {
  position: fixed;
  display: flex;
  right: 5px;
  bottom: 55px;
  z-index: 10000;
  max-width: 400px;
  width: 100%;
  max-height: 150px;
  height: 100%;
  background: #151515;
  border: 1px solid #444;
  border-radius: 8px;
}

#mainViewTimerNotificationContainer {
  display: flex;
  flex: 1 1 0;
  flex-direction: column;
  padding: 10px;
}
/* ... */

